Fix invisible label in Firefox tabs
Firefox uses light text color in tabs with light background, when GTK
titlebar is used. This makes the tab label invisible.

Fixed re-introducing headerbar like tabs (in Firefox only). This brings
also the improvement that the active tab is way more visible (active
tab background is light, while non-active ones are dark) respect the
solution of only fix the label text color.

--- a/gtk/src/light/gtk-3.20/_apps.scss
+++ b/gtk/src/light/gtk-3.20/_apps.scss
@@ -457,7 +457,7 @@ terminal-window {
     // REMOVE THIS when firefox supports rounded menus
     menu, .menu,.context-menu { border-radius: 0; }
 
-    menubar, .menubar { color: $headerbar_fg_color; }
+    menubar, .menubar { background-color: $headerbar_bg_color; color:$headerbar_fg_color; }
   
     // Adapt scrollbars a bit more to the GTK Scrollbar styling
     scrollbar {
